--- a/api-doc/us_common_app.html
+++ b/api-doc/us_common_app.html
@@ -10,32 +10,28 @@
 <hr>
 
 <h1>Module us_common_app</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Module implementing the <b>US-Common (active) OTP application
- behaviour</b>.
+<ul class="index"><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>
 
 <p><b>Behaviours:</b> <a href="application.html"><code>application</code></a>.</p>
 
-<h2><a name="description">Description</a></h2>Module implementing the <b>US-Common (active) OTP application
- behaviour</b>.
-
 <h2><a name="index">Function Index</a></h2>
-<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#start-2">start/2</a></td><td>Starts the US-Common services.</td></tr>
-<tr><td valign="top"><a href="#stop-1">stop/1</a></td><td>Stops the US-Common services.</td></tr>
+<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#start-2">start/2</a></td><td></td></tr>
+<tr><td valign="top"><a href="#stop-1">stop/1</a></td><td></td></tr>
 </table>
 
 <h2><a name="functions">Function Details</a></h2>
 
 <h3 class="function"><a name="start-2">start/2</a></h3>
 <div class="spec">
-<p><code>start(Type::<a href="http://www.erlang.org/edoc/doc/kernel/doc/application.html#type-start_type">application:start_type()</a>, StartArgs::term()) -&gt; {ok, pid()} | {ok, pid(), State::term()} | {error, Reason::term()}</code><br></p>
+<p><code>start(Type::<a href="http://www.erlang.org/edoc/doc/kernel/doc/application.html#type-start_type" docgen-rel="seetype" docgen-href="kernel:application#start_type/0">application:start_type()</a>, StartArgs::term()) -&gt; {ok, pid()} | {ok, pid(), State::term()} | {error, Reason::term()}</code><br></p>
 <p> </p>
-</div><p>Starts the US-Common services.</p>
+</div>
 
 <h3 class="function"><a name="stop-1">stop/1</a></h3>
 <div class="spec">
-<p><code>stop(State::term()) -&gt; <a href="#type-void">void()</a></code><br></p>
+<p><code>stop(State::term()) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
 <p> </p>
-</div><p>Stops the US-Common services.</p>
+</div>
 <hr>
 
 <div class="navbar"><a name="#navbar_bottom"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
