--- a/api-doc/us_common_scheduler_bridge_sup.html
+++ b/api-doc/us_common_scheduler_bridge_sup.html
@@ -10,23 +10,14 @@
 <hr>
 
 <h1>Module us_common_scheduler_bridge_sup</h1>
-<ul class="index"><li><a href="#description">Description</a></li><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>Module implementing the <b>OTP supervisor bridge for the US-Common main
- scheduler</b>, so that this server is attached to the US-Common supervision
- tree, through the US-Common root supervisor, defined in the us_common_sup
- module.
+<ul class="index"><li><a href="#index">Function Index</a></li><li><a href="#functions">Function Details</a></li></ul>
 
 <p><b>Behaviours:</b> <a href="supervisor_bridge.html"><code>supervisor_bridge</code></a>.</p>
 
-<h2><a name="description">Description</a></h2>Module implementing the <b>OTP supervisor bridge for the US-Common main
- scheduler</b>, so that this server is attached to the US-Common supervision
- tree, through the US-Common root supervisor, defined in the us_common_sup
- module.
-
 <h2><a name="index">Function Index</a></h2>
-<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#init-1">init/1</a></td><td>Callback to initialise this supervisor bridge, typically in answer to
- start_link/1 being executed.</td></tr>
-<tr><td valign="top"><a href="#start_link-0">start_link/0</a></td><td>Starts and links a US-Common supervision bridge to the US scheduler.</td></tr>
-<tr><td valign="top"><a href="#terminate-2">terminate/2</a></td><td>Callback to terminate this supervisor bridge.</td></tr>
+<table width="100%" border="1" cellspacing="0" cellpadding="2" summary="function index"><tr><td valign="top"><a href="#init-1">init/1</a></td><td></td></tr>
+<tr><td valign="top"><a href="#start_link-0">start_link/0</a></td><td></td></tr>
+<tr><td valign="top"><a href="#terminate-2">terminate/2</a></td><td></td></tr>
 </table>
 
 <h2><a name="functions">Function Details</a></h2>
@@ -35,26 +26,19 @@
 <div class="spec">
 <p><code>init(Args::list()) -&gt; {ok, pid(), State::term()} | ignore | {error, Error::term()}</code><br></p>
 <p> </p>
-</div><p>Callback to initialise this supervisor bridge, typically in answer to
- start_link/1 being executed.
-</p>
+</div>
 
 <h3 class="function"><a name="start_link-0">start_link/0</a></h3>
 <div class="spec">
 <p><code>start_link() -&gt; term()</code><br></p>
 <p> </p>
-</div><p><p>Starts and links a US-Common supervision bridge to the US scheduler.</p>
-
- Note: typically spawned as a supervised child of the US-Common root supervisor
- (see us_common_sup:init/1), hence generally triggered by the application
- initialisation.
-</p>
+</div>
 
 <h3 class="function"><a name="terminate-2">terminate/2</a></h3>
 <div class="spec">
-<p><code>terminate(Reason::shutdown | term(), State::term()) -&gt; <a href="#type-void">void()</a></code><br></p>
+<p><code>terminate(Reason::shutdown | term(), State::term()) -&gt; <a href="#type-void" docgen-rel="seetype" docgen-href="#void/0">void()</a></code><br></p>
 <p> </p>
-</div><p>Callback to terminate this supervisor bridge.</p>
+</div>
 <hr>
 
 <div class="navbar"><a name="#navbar_bottom"></a><table width="100%" border="0" cellspacing="0" cellpadding="2" summary="navigation bar"><tr><td><a href="overview-summary.html" target="overviewFrame">Overview</a></td><td><a href="http://www.erlang.org/"><img src="erlang.png" align="right" border="0" alt="erlang logo"></a></td></tr></table></div>
